@@ -1,7 +1,11 @@
+2017-01-17	<fgndevelop@posteo.org>	
+		- The man page hint below the usage text is now printed conditionally 
+		  if both MAN_SECTION and MAN_TITLE have been defined
+
 2017-01-12	<fgndevelop@posteo.org>	
 		- Modified the Makefile.custom process to export TOPLEVEL and SCRIPT_CODE
 		- both the 'SCRIPT_CODE' and the 'clean' target are now conditionally 
-		  included when MAKEFILE_CUSTOM exists
+		  included/called if MAKEFILE_CUSTOM exists
 		- Makefile.custom no longer requires parsing by frwk-sh
 
 2017-01-06	<fgndevelop@posteo.org>	
